Feat: ajout de api pour recuperer les livres et les clients
